<resources>
    <string name="app_name">MiPokedex</string>
    <string name="logo">IconPichu</string>
    <string name="logo2">IconSandshrew</string>
    <string name="pokeimagne">SpriteDelPoke</string>
    <string name="pokeTipo1">tipo1</string>
    <string name="pokeTipo2">tipo2</string>
    <string name="titulo">Creado por:\n Hernandez Calderon Fernando</string>
    <string name="urlPoke">https://pokeapi.co/api/v2/pokemon/</string>
    <string name="logs">LOGS</string>
    <string name="listaNom">Nombre pokemon</string>
    <string name="pokeNum">###</string>
    <string name="experiencia">Exp Base:</string>
    <string name="tamano">Tamaño(dm):</string>
    <string name="peso">Peso(hg):</string>
    <string name="numero">PokeID:</string>
    <string name="nombre">PokeNombre</string>
    <string name="tipo">Tipo(s)</string>
    <string name="divisor">/</string>
    <string name="sonido">Apagar sonido</string>
    <string name="stats">Estadisticas</string>
    <string name="detalles">Detalles</string>

    <string name="agua">Agua</string>
    <string name="fuego">Fuego</string>
    <string name="volador">Volador</string>
    <string name="fantasma">Fantasma</string>
    <string name="bicho">Bicho</string>
    <string name="hielo">Hielo</string>
    <string name="tierra">Tierra</string>
    <string name="roca">Roca</string>
    <string name="peleador">Peleador</string>
    <string name="siniestro">Siniestro</string>
    <string name="hada">Hada</string>
    <string name="electrico">Electrico</string>
    <string name="normal">Normal</string>
    <string name="psiquico">Psiquico</string>
    <string name="dragon">Dragon</string>
    <string name="veneno">Veneno</string>
    <string name="acero">Acero</string>
    <string name="hierba">Hierba</string>

    <string name="hp">Vida</string>
    <string name="attack">Ataque</string>
    <string name="defense">Defensa</string>
    <string name="specialA">Ataque Esp</string>
    <string name="specialD">Defensa Esp</string>
    <string name="speed">Velocidad</string>

</resources>